<resources>
    <string name="app_name">SmartGlass</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="hint_mobile_number">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="login">Login</string>
    <string name="about_us_title">About us</string>

<!--    gps location related...-->
    <string name="gps_settings_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings_title">GPS Settings</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="glass_id">GLass ID</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="waiting_for_commands">Waiting for commands</string>
    <string name="title_activity_map">Map</string>
    <string name="name">Full Name</string>
    <string name="logout">Logout</string>
</resources>